# advanced-dev-ops

./: index.html
.github/workflows/: build-package.yml  connect-to-server.yml  deploy.yml  test.yml
simplestat/: __init__.py  stats.py
topic-00-testing/javascript/: brick-out-model-test.html  brick-out-model-test.js  brick-out-model.js  brick-out.html  package-lock.json  package.json
topic-00-testing/javascript/features/: ball.feature  gameplay.feature  paddle.feature
topic-00-testing/javascript/features/step_definitions/: steps.js
topic-00-testing/python/features/: calc.feature
topic-00-testing/python/features/steps/: calc_steps.py
topic-03-packaging/wheels/: README.md  pyproject.toml
topic-03-packaging/wheels/simplestat.egg-info/: PKG-INFO  SOURCES.txt
topic-04-automation/ansible-automation/: deploy-to-server.yml  deploy.yml  example.yml  hosts.ini  inventory.ini  simple-deploy.yml  site.yml
topic-04-automation/ansible-automation/example-app/: app.py
