[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplestat"
version = "1.0.0"
description = "A simple statistics package for basic data analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DevOps Course", email = "devops@example.com"}
]
keywords = ["statistics", "math", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/example/simplestat"
Documentation = "https://github.com/example/simplestat/README.md"
Repository = "https://github.com/example/simplestat.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplestat*"]
exclude = ["tests*"]
